Fikset encoding og noen småbugs som findbugs klager på. Slettet FilUtils som ikke er i bruk